--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              Neo Han Wei
-bio:                'Data Scientist. Problem Solver.'
+bio:                'Data Scientist interested in connecting the dots between Data and Business. Based in Singapore.'
 description:        "Strong hands-on experience in building Machine Learning (ML) models, especially in marketing analytics and recommender systems. He has also travelled to Sydney, Bangalore and Shanghai to work on various data projects. Above all, he is an avid learner of all things in data science."
 reading_time:       true
 words_per_minute:   200
@@ -37,7 +37,7 @@ disqus_shortname:   nhanwei
   #ad-client:
   #ad-slot:
 #bing-verify:
-#email:
+email:            nhanwei@gmail.com
 #twitter:            username
 #facebook:           username
 github-url:         nhanwei
