--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 title:              Neo Han Wei
-bio:                'Data Scientist based in Singapore'
-description:        "Hands-on experience in building Machine Learning (ML) models. Not afraid of diving deep into the algorithms before applying on business problems. Above all, he is an avid learner of all things in data science."
+bio:                'Data Scientist Based in Singapore'
+description:        "Hands-on experience in building Machine Learning models. Not afraid to dive deep into the algorithms before applying to business problems. Above all, he is an avid learner of all things in data science."
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
