--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              Stan Neo
-bio:                'Seasoned Python/SQL/Tableau/Machine Learning instructor and aspiring career coach in data & tech'
+bio:                'Seasoned Python/SQL/Tableau/Machine Learning instructor and career coach in data & tech'
 description:        "Experienced in building machine learning solutions and passionate about guiding others to succeed in the data and tech industry."
 reading_time:       true
 words_per_minute:   200
