updated about me page

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 
-title: Stan Neo - Career Services
+title: "Stan Neo - Career and Consulting Services"
 description: Coaching, Mock Interviews, CV Reviews, and more.
 url: "https://nhanwei.github.io" 
 github_username: nhanwei
