--- a/.github/workflows/jekyll-build.yml
+++ b/.github/workflows/jekyll-build.yml
@@ -17,6 +17,9 @@ jobs:
           ruby-version: '3.1' # Use a Ruby version compatible with Jekyll 3.9.x or the github-pages gem
           bundler-cache: true # runs bundle install and caches gems
 
+      - name: Add Linux platform to Gemfile.lock
+        run: bundle lock --add-platform x86_64-linux
+
       - name: Build Jekyll site
         run: bundle exec jekyll build
 
